# mice

./: .gitignore  .gitmodules  INSTALL.md  README.md  Results.ipynb  Results_Ettin.ipynb  pyproject.toml
figures/: table-models.tex  table1.tex  table1_full.tex  table2.tex  table3.tex  table_MaskEval.tex  table_eff.tex
scripts/: compare_latency_footprint.py  profile_ColBERT.py  profile_mask_scorers.py  profile_midFusion.py  profiling_utils.py  tests_ddp_inference.py
src/: configuration.py  format.py  pre_experiment.py  stats.py  tests.py
src/HF_eval/: baselines.py  baselines.yaml  baselines_small.yaml
src/hf_training/: bm25_minilm_hf.yaml  configuration.py  train.py  utils.py
src/ir_training/: experiment.py  experiment_ColBERT.py  merge_layer_search.py  models.py  xp_.yaml  xp_debug.yaml
src/midFusion_training/: debug_MidFusion.yaml  experiment.py  midfusion_ettin_150M_l11_drop14.yaml  midfusion_ettin_150M_l8_drop11.yaml  midfusion_ettin_17M_cls_l2.yaml  midfusion_ettin_17M_cls_l3.yaml  midfusion_ettin_17M_l3_drop5.yaml  midfusion_ettin_17M_l3_drop6.yaml  midfusion_ettin_17M_l3_drop6_noSelfAttn.yaml  midfusion_ettin_17M_l3_drop6_random_top_layers.yaml  midfusion_ettin_17M_l3_drop_search.yaml  midfusion_ettin_17M_l3_noSelfAttn.yaml  midfusion_ettin_17M_l3_random_top_layers.yaml  midfusion_ettin_32M_cls_l4.yaml  midfusion_ettin_32M_cls_l6.yaml  midfusion_ettin_32M_l4_drop7.yaml  midfusion_ettin_32M_l4_drop7_noSelfAttn.yaml  midfusion_ettin_32M_l4_drop7_random_top_layers.yaml  midfusion_ettin_32M_l4_drop_search.yaml  midfusion_ettin_32M_l6_drop8.yaml  (+20 more)
(+63 files in other folders)
